apps/base/fizzy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fizzy
spec:
  ports:
    - port: 80
  selector:
    app: fizzy
  type: ClusterIP
